tests/compiletests/ui/glam/invalid_vector_type.stderr
error: `#[spirv(vector)]` must have 2, 3 or 4 members
 --> $DIR/invalid_vector_type.rs:8:1
  |
8 | pub struct FewerFields {
  | ^^^^^^^^^^^^^^^^^^^^^^

error: `#[spirv(vector)]` must have 2, 3 or 4 members
  --> $DIR/invalid_vector_type.rs:13:1
   |
13 | pub struct TooManyFields {
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: `#[spirv(vector)]` type fields must all be floats, integers or bools
  --> $DIR/invalid_vector_type.rs:22:1
   |
22 | pub struct NotVectorField {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: field type is f32x2

error: `#[spirv(vector)]` member types must all be the same
  --> $DIR/invalid_vector_type.rs:34:1
   |
34 | pub struct DifferentTypes {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

